tdf#156306 sw: PDF export: duplicate structure element from ...

... lazy open LIBody - with mpFrameInfo, not mpNumInfo - causes this
assert and later an infinite loop as the SE is its own parent:

sw/source/core/text/EnhancedPDFExportHelper.cxx:468: void SwTaggedPDFHelper::BeginTag(vcl::PDFWriter::StructElement, const rtl::OUString&): Assertion `rFrameTagSet.find(pKey) == rFrameTagSet.end()' failed.

(regression from commit d467f1aa3d028f399826c97e2eecedcd79efcf65)

Change-Id: I90f057c45a22e5ef44ae5ae9d1cb1d6b8870379f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155253
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>